--- a/src/scss/components/_storyImage.scss
+++ b/src/scss/components/_storyImage.scss
@@ -21,17 +21,19 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    a {
-      background-color: var(--color-bg);
-      margin-top: 20px;
-      position: relative;
-      margin-left: 20px;
-      li {
+    span {
+      a {
         background-color: var(--color-bg);
-        img {
+        margin-top: 20px;
+        position: relative;
+        margin-left: 20px;
+        li {
           background-color: var(--color-bg);
-          width: 140px;
-          height: 190px;
+          img {
+            background-color: var(--color-bg);
+            width: 140px;
+            height: 190px;
+          }
         }
       }
     }
