--- a/src/scss/pages/_search.scss
+++ b/src/scss/pages/_search.scss
@@ -46,46 +46,47 @@
         }
       }
     }
-    span {
-      // width: 30%;
-      padding: 5px;
-      a {
-        padding: 10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    #user {
+      margin-top: 30px;
+      width: 40%;
+      // // width: 30%;
+      // padding: 5px;
+      // a {
+      //   padding: 10px;
+      //   display: flex;
+      //   justify-content: center;
+      //   align-items: center;
+      //   border-radius: 10px;
+      //   width: 100%;
+      .profile_intro_Search {
+        border: 1px solid var(--color-search-border);
         border-radius: 10px;
+        padding: 10px;
         width: 100%;
-        .profile_intro_Search {
-          border: 1px solid var(--color-search-border);
-          border-radius: 10px;
-          padding: 10px;
+        section {
           width: 100%;
-          section {
-            width: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          img {
+            width: 70px;
+            border-radius: 100px;
+          }
+          ul {
+            position: relative;
+            margin-left: 20px;
             display: flex;
-            align-items: center;
             justify-content: center;
-            img {
-              width: 70px;
-              border-radius: 100px;
+            align-items: center;
+            flex-direction: column;
+            .notVisable {
+              visibility: hidden;
+              height: 0;
             }
-            ul {
-              position: relative;
-              margin-left: 20px;
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              flex-direction: column;
-              .notVisable {
-                visibility: hidden;
-                height: 0;
-              }
-              :nth-child(4n) {
-                visibility: hidden;
-                height: 0;
-                width: 0;
-              }
+            :nth-child(4n) {
+              visibility: hidden;
+              height: 0;
+              width: 0;
             }
           }
         }
