--- a/src/scss/components/_storyImage.scss
+++ b/src/scss/components/_storyImage.scss
@@ -23,6 +23,7 @@
     justify-content: center;
     span {
       margin-left: 20px;
+      margin-top: 10px;
       a {
         background-color: var(--color-bg);
         margin-top: 20px;
